# merge-lang

./: Cargo.toml  GENERAL.md  LICENSE  README.md  README.org
core/: Cargo.toml
core/src/: main.rs
core/src/inline/: langs.rs  mod.rs
core/src/log/: logger.rs
core/src/parser/: inlang.rs  mod.rs  parser.rs  puke.rs
core/src/parser/config-parser/: README.md
core/src/parser/error/: mod.rs  syntax.rs
core/src/parser/macro-parser/: README.md
core/src/prep/: mod.rs  preprocessor.rs  tasks.rs
core/src/task/: task.rs
core/src/tokenizer/: mod.rs  tmp.rs  token.rs  tokenizer.rs  utils.rs
core/tests/prep/: remove_comments.rs
docs/: main.html  main.ics  main.md  main.org  main.org_archive  main.tex
docs/tubitak/: README.org  merge.org  taslak.org  taslak.tex
examples/demo/: Cargo.toml  README.md
examples/demo/src/: main.rs
examples/ffi/: Cargo.toml  README.md  build.rs
examples/ffi/src/: main.rs  pipe.c  pipe.json  pipe.py
logo/: README.org
logo/inspiration/: Lasercut_jigsaw.inx  Lasercut_jigsaw.py
merge-proc/: Cargo.toml
merge-proc/tests/: python.rs  rust.rs
proc/: Cargo.toml  README.org
proc/src/: lib.rs
syntax/: syntax.mg
syntax/file/: cprogram.mg.cpp  merge.toml  pyprogram.mg.py
tests/: Cargo.toml
