[package]
name = "merge-lang"
version = "0.1.2"
edition = "2021"
description = "Merge Programming Language"
authors = ["Orhan KARAMAN <utfeightt@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/utfeight/merge"
# readme = "README.md"
keywords = ["merge", "programming", "language", "compiler", "merge-lang" ]
categories = ["programming-languages", "compilers"]
homepage = "https://github.com/utfeight/merge"
# documentation = "https://docs.rs/merge-lang"

# TODO
# [[test]]
# name = "merge_prep_tests"
# path = "tests/prep/remove_comments.rs"

[dependencies]
bytestring = "1.3.0"
regex = "1.9.6"
thiserror = "1.0.49"
log = "0.4.20"
